// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render a Caption bar with both credit and caption  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    >
      <span
        className="htz-j"
      >
        The Caption
      </span>
      <span
        className="htz-k htz-l htz-m htz-f htz-g htz-h htz-i"
      >
        קרדיט: me
      </span>
    </div>
  </div>,
  "styles": ".htz-a{word-break:break-word}.htz-b{overflow-x:hidden}.htz-c{font-weight:700}.htz-d{padding-right:1rem}.htz-e{color:#505050}.htz-j{margin-left:1rem}.htz-k{display:inline}.htz-l{flex-shrink:0}.htz-m{font-weight:300}@media (max-width: 79.9375em){.htz-f{font-size:2rem}.htz-g{line-height:1.5em}}@media (min-width: 80em){.htz-h{font-size:2rem}.htz-i{line-height:1.5em}}",
}
`;

exports[`should correctly render a Caption bar with only the caption, Left to right, and with dynamic background  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    >
      <span
        className="htz-k"
      >
        The Caption
      </span>
      
    </div>
  </div>,
  "styles": ".htz-a{word-break:break-word}.htz-b{overflow-x:hidden}.htz-c{font-weight:700}.htz-d{padding-right:1rem}.htz-k{margin-left:1rem}@media (max-width: 79.9375em){.htz-e{color:#0B7EB5}.htz-f{font-size:2rem}.htz-g{line-height:1.5em}}@media (min-width: 80em){.htz-h{color:#FFA6A6}.htz-i{font-size:2rem}.htz-j{line-height:1.5em}}",
}
`;

exports[`should correctly render a Caption bar with only the credit  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    >
      <span
        className="htz-j"
      />
      <span
        className="htz-k htz-l htz-m htz-f htz-g htz-h htz-i"
      >
        קרדיט: me
      </span>
    </div>
  </div>,
  "styles": ".htz-a{word-break:break-word}.htz-b{overflow-x:hidden}.htz-c{font-weight:700}.htz-d{padding-right:1rem}.htz-e{color:#505050}.htz-j{margin-left:1rem}.htz-k{display:inline}.htz-l{flex-shrink:0}.htz-m{font-weight:300}@media (max-width: 79.9375em){.htz-f{font-size:2rem}.htz-g{line-height:1.5em}}@media (min-width: 80em){.htz-h{font-size:2rem}.htz-i{line-height:1.5em}}",
}
`;

exports[`should render no Caption bar 1`] = `
Object {
  "component": <div />,
  "styles": "",
}
`;
